k8s/mongodb.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  containers:
  - name: mongodb
    image: mongo
    ports:
      - containerPort: 27017

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-svc
spec:
  type: ClusterIP
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
