k8s/ingress.dev.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ithome-ingress
  namespace: develop
spec:
  backend:
    serviceName: ithome
    servicePort: 80
